@@ -141,6 +141,15 @@ http://sourceforge.net/tracker/index.php?func=detail&aid=<id>&group_id=5470&atid
 
 - #117606 - configure.in, configure - use gcc -shared and gcc -fPIC
 
+- #227562 - urllib.py - call URLopener.http_error_default when
+                        an invalid 401 request is being handled.
+
+- urllib.py - provide simple recovery/escape from apparent redirect recursion
+
+- #129288 - urllib.py - chanign %02x to %02X in quoting
+
+- urllib.py - HTTPS now works with string URLs
+
 What's New in Python 2.0?
 =========================
 
